# nigerian-wall-e

./: .gitignore
playground/: quantize_onnx_model.py  sin_model.info  sin_model.json  sin_model.py
playground/espdl/: sin_model.onnx  sin_model.pth
playground/espdl/test-run/: CMakeLists.txt
playground/test-run/: dependencies.lock.esp32p4
playground/test-run/components/esp-dl/fbs_loader/cmake/: data_file_embed_asm_aligned.cmake  utilities.cmake
playground/test-run/main/: CMakeLists.txt  main.cpp
playground/test-run/main/models/: sin_model.espdl
